# playground-base

./: task1.sh
scripts/: build-task1.sh  nsight-profile.sh
task-1/: CMakeLists.txt  README.md  vcpkg.json
task-1/include/playground/: matmul.hpp  test_data.hpp
task-1/src/: CMakeLists.txt
